fixed white space on bottom of profile due to translateY -150px

--- a/docs/profile.css
+++ b/docs/profile.css
@@ -1,6 +1,7 @@
 #profile {
   margin-top: 230px;
   scroll-margin-top: 250px;
+  margin-bottom: -100px;
 }
 
 .profile-pic {
